--- a/src/routes/Mypage.css
+++ b/src/routes/Mypage.css
@@ -27,6 +27,21 @@
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+.withdraw-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.withdraw-button:hover {
+  background-color: #c0392b;
+}
 
 .user-name {
   font-size: 24px;
@@ -234,6 +249,38 @@
   width: 100%;
   /* 부모 요소에 맞춰 100% */
 }
+.delete-address-button {
+  margin-left: 10px;
+  background-color: #ff4d4f;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.2s ease;
+}
+.register-address-button {
+  margin-left: 10px;
+  background-color: #1890ff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.2s ease;
+}
+
+.register-address-button:hover {
+  background-color: #1677cc;
+}
+
+
+.delete-address-button:hover {
+  background-color: #e04344;
+}
+
 
 .delivery-item {
   display: flex;
