--- a/src/routes/Cart.css
+++ b/src/routes/Cart.css
@@ -210,7 +210,7 @@ h1 {
     box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
 }
 
-.recommended-img {
+.recommended-image{
     width: 100%;
     height: 140px;
     object-fit: cover;
